# SynergyGrid

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  remote.py  vec_normalize_stats.pkl
assets/: paths.json
assets/sprites/: base_resource.xcf
dev/: 00-folder-info.md  SB3_training_values.md  SynergyGridTechStack.md  decisions.md  links.md  notes.md  risks.md  running_instructions.md  terminology.md  workflow.md
docs/: 00-folder-info.md  code_style.md  terminology.md  workflow.md
review/: review.md
src/: gymnasium_sandbox.py
src/experiments/: __init__.py  __main__.py  gymnasium_sandbox.py
src/experiments/config/: __init__.py  configs.py
src/experiments/gymnasium/: __init__.py  gymnasium_sandbox.py  plots.py
src/experiments/plots/: plots.py
src/syn_grid/: __main__.py
src/syn_grid/config/: config_manager.py  configs.py  configs.yaml  models.py  run_config.yaml  test_configs.yaml
src/syn_grid/core/: grid_world.py
src/syn_grid/core/agent/: digestion_engine.py  synergy_agent.py
src/syn_grid/core/droid/: digestion_engine.py  synergy_droid.py
src/syn_grid/core/orbs/: base_orb.py  orb_factory.py  orb_meta.py
src/syn_grid/core/orbs/direct/: negative_orb.py
src/syn_grid/core/orbs/synergy/: tier_orb.py
src/syn_grid/core/resources/: base_resource.py  resource_meta.py
src/syn_grid/core/resources/direct/: negative_resource.py
src/syn_grid/core/resources/effects/: dummy_file
src/syn_grid/core/resources/synergy/: tier_resource.py
src/syn_grid/core/utils/: timer.py
src/syn_grid/gymnasium/: action_space.py  env_factory.py  environment.py  observation_space.py  observation_space_old.py
src/syn_grid/gymnasium/observation_space/: base_observation_handler.py  observation_handler.py
src/syn_grid/gymnasium/observation_space/difficulty/: base_difficulty.py  medium.py
src/syn_grid/gymnasium/observation_space/modality/: spatial_modality.py  vector_modality.py
src/syn_grid/gymnasium/observation_space_developing/: observation_handler.py  observation_registry.py
src/syn_grid/plot/: plot.py
src/syn_grid/rendering/: pygame_renderer.py
src/syn_grid/runners/agent_runner/: agent_runner.py  evaluate_agent.py  train_agent.py
src/syn_grid/runners/agent_runners/: agent_registry.py  agent_runner.py  base_agent_runner.py  evaluate_agent.py  train_agent.py
src/syn_grid/runners/agent_runners/sb3/: __init__.py  (+4 more)
src/syn_grid/runners/human_runner/: human_runner.py
src/syn_grid/utils/: args_utils.py  parse_args.py  paths_util.py
src/synergygrid/: __init__.py  __main__.py
src/synergygrid/agentrunner/: __init__.py  base.py  eval.py  train.py
src/synergygrid/config/: __init__.py  configs.py
src/synergygrid/core/: __init__.py  agent.py  agent_runner.py  environment.py  grid_world.py
src/synergygrid/core/agent/: __init__.py  digestion_engine.py  synergy_agent.py
src/synergygrid/core/resources/: __init__.py  base_build.py  base_resource.py  base_tier_resource.py  resource_meta.py  resource_types.py
src/synergygrid/experiment/: base.py  eval.py  train.py
src/synergygrid/gymnasium/: __init__.py  environment.py  observation_space.py  register_env.py
src/synergygrid/rendering/: __init__.py  pygame_renderer.py
src/synergygrid/runners/agent_runner/: evaluate_agent.py  train_agent.py
src/synergygrid/runners/human_runner/: human_runner.py
src/synergygrid/utils/: __init__.py  parse_args.py  paths.py
tests/: test_agent.py  test_environment.py  test_grid_world.py
tests/agentrunner/: test_base.py
tests/core/: test_agent.py  test_grid_world.py
tests/core/agent/: __init__.py  test_digestion_engine.py  test_synergy_agent.py
tests/core/droid/: test_digestion_engine.py  test_synergy_droid.py
tests/core/orbs/: test_base_orb.py  test_orbFactory.py  test_orb_meta.py
tests/core/orbs/synergy/: test_tier_orb.py
tests/core/resources/: __init__.py  test_base_resource.py  test_resource_meta.py  test_resource_types.py  utils.py
tests/core/resources/synergy/: __init__.py  test_tier.py  test_tier_resource.py
tests/gymnasium/: test_environment.py
tests/runners/agent_runner/: test_agent_runner.py
tests/utils/: config_helpers.py
(+29 files in other folders)
