###################################################################################
# The -e flag stands for editable mode. It installs the package so changes
# in source code are immediately reflected. Recommended for development.
# [dev] installs extra dependencies for development.
#
# Before running the install command make sure you have a virtual environment (venv)
# so project-specific dependencies are isolated and don’t interfere with your system Python.
#
# pip install -e .[dev]
# Install project + dependencies as defined in pyproject.toml
# and updates the project with new additions if already installed
#
# pip install -e .[dev] --force-reinstall
# Reinstall everything even if versions already match
#
# pip install -e .[dev] --force-reinstall --no-cache-dir
# Full clean reinstall, ignores pip cache (good when pip is acting weird)
#
# pip install -e .[dev] --upgrade
# Upgrade dependencies if newer versions are allowed by version constraints
#
# pip show synergygrid
# Show where the package is installed and which version pip sees
#
# pip check
# Verify dependency conflicts
###################################################################################

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synergygrid"
version = "0.1.0"
license = {file = "LICENSE"}
description = "Benchmark for synergy reasoning in agents"
readme = "README.md"
authors = [
    {name = "Joel Lansgren", email = "jola2311@student.miun.se"},
    {name = "Lauri Bernstéen", email = "labe2301@student.miun.se"}
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "gymnasium>=1.2",
    "numpy>=2.2",
    "pygame>=2.6"
]

# black is for automatical code formatting. Usage: `black path/to/file.py`

[project.optional-dependencies]
dev = [
    "stable-baselines3[extra]>=2.7.1",
    "swig>=4.4.1",
    "matplotlib>=3.10",
    "pytest>=9.0",
    "gymnasium[box2d]>=1.2",
    "black>=26.1"
]

[tool.setuptools.packages.find]
where = ["src"]
